--- a/analises/analise_defeitos.ipynb
+++ b/analises/analise_defeitos.ipynb
@@ -8237,7 +8237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -8850,7 +8850,7 @@
            "Sujo de óleo"
           ]
          ],
-         "hovertemplate": "Temperatura (F°)=%{marker.color}<br>Total de Defeitos=%{marker.size}<br>Defeito Mais Frequente do Dia=%{customdata[0]}<extra></extra>",
+         "hovertemplate": "Temperatura (F°)=%{marker.color}<br>Total de Defeitos no Dia=%{marker.size}<br>Defeito Mais Frequente do Dia=%{customdata[0]}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": [
@@ -10553,7 +10553,7 @@
           1
          ],
          "title": {
-          "text": "Total de Defeitos"
+          "text": "Total de Defeitos no Dia"
          }
         }
        }
@@ -10569,7 +10569,7 @@
     "    x=\"Temperatura (F°)\", \n",
     "    y=\"Total de Defeitos no Dia\",\n",
     "    title=\"Dispersão: Total de Defeitos vs Temperatura da Gota\",\n",
-    "    labels={\"Temperatura (F°)\": \"Temperatura (F°)\", \"Total de Defeitos no Dia\": \"Total de Defeitos\"},\n",
+    "    labels={\"Temperatura (F°)\": \"Temperatura (F°)\", \"Total de Defeitos no Dia\": \"Total de Defeitos no Dia\"},\n",
     "    hover_data=[\"Defeito Mais Frequente do Dia\"],\n",
     "    color='Temperatura (F°)',\n",
     "    color_continuous_scale='redor',\n",
