--- a/analises/modelo_ml.ipynb
+++ b/analises/modelo_ml.ipynb
@@ -2643,7 +2643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -2654,210 +2654,210 @@
        },
        "data": [
         {
-         "hovertemplate": "Gotas cortadas (toneladas)=%{x}<br>Total de Defeitos no Dia=%{marker.color}<extra></extra>",
+         "hovertemplate": "Gotas cortadas (toneladas)=%{marker.color}<br>Total de Defeitos no Dia=%{marker.size}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": [
-           222,
-           249,
-           268,
-           242,
-           232,
-           229,
-           191,
-           222,
-           293,
-           159,
-           203,
-           222,
-           293,
-           240,
-           171,
-           231,
-           229,
-           231,
-           198,
-           215,
-           212,
-           224,
-           224,
-           193,
-           208,
-           255,
-           287,
-           291,
-           291,
-           243,
-           201,
-           229,
-           201,
-           220,
-           187,
-           201,
-           191,
-           166,
-           127,
-           242,
-           242,
-           305,
-           276,
-           277,
-           280,
-           305,
-           122,
-           180,
-           296,
-           217,
-           211,
-           198,
-           170,
-           195,
-           177,
-           191,
-           168,
-           192,
-           183,
-           161,
-           162,
-           135,
-           184,
-           189,
-           156,
-           177,
-           143,
-           122,
-           254,
-           249,
-           229,
-           212,
-           218,
-           180,
-           143,
-           189,
-           173,
-           298,
-           265,
-           230,
-           256,
-           192,
-           173,
-           188,
-           197,
-           203,
-           206,
-           185,
-           169,
-           162,
-           175,
-           206,
-           179,
-           192,
-           184,
-           169,
-           175,
-           200,
-           249,
-           244,
-           195,
-           317,
-           288,
-           113,
-           192,
-           212,
-           188,
-           154,
-           166,
-           176,
-           216,
-           113,
-           240,
-           214,
-           191,
-           205,
-           205,
-           206,
-           190,
-           175,
-           234,
-           226,
-           295,
-           200,
-           182,
-           234,
-           295,
-           328,
-           249,
-           195,
-           266,
-           211,
-           211,
-           198,
-           199,
-           183,
-           210,
-           228,
-           352,
-           214,
-           212,
-           264,
-           203,
-           231,
-           196,
-           179,
-           198,
-           261,
-           210,
-           353,
-           324,
-           218,
-           192,
-           190,
-           190,
-           184,
-           182,
-           148,
-           158,
-           195,
-           188,
-           228,
-           261,
-           210,
-           178,
-           231,
-           243,
-           303,
-           239,
-           198,
-           189,
-           171,
-           179,
-           195,
-           242,
-           243,
-           212,
-           167,
-           277,
-           243,
-           242,
-           204,
-           152,
-           204,
-           167,
-           209,
-           206,
-           239,
-           193,
-           196,
-           79,
-           203,
-           234,
-           273,
-           273,
-           258,
-           218,
-           218,
-           213,
-           256
+           20.948,
+           21.022,
+           21.449,
+           21.526,
+           21.439,
+           21.506,
+           21.524,
+           21.427,
+           7.947,
+           21.89,
+           21.857,
+           0.985,
+           12.494,
+           20.045,
+           20.287,
+           20.121,
+           20.261,
+           20.403,
+           20.4,
+           20.429,
+           20.464,
+           20.353,
+           20.422,
+           20.447,
+           22.406,
+           21.226,
+           22.082,
+           8.598,
+           8.823,
+           14.741,
+           14.685,
+           14.851,
+           14.783,
+           14.169,
+           14.749,
+           14.777,
+           14.787,
+           10.55,
+           14.451,
+           5.292,
+           13.213,
+           21.495,
+           21.441,
+           21.508,
+           21.535,
+           21.507,
+           1.114,
+           21.061,
+           21.936,
+           21.52,
+           21.562,
+           21.593,
+           21.55,
+           21.376,
+           21.454,
+           21.427,
+           21.466,
+           21.519,
+           20.581,
+           20.58,
+           21.427,
+           21.506,
+           21.527,
+           20.64,
+           21.464,
+           21.496,
+           3.07,
+           22.992,
+           24.699,
+           24.736,
+           24.646,
+           24.655,
+           24.646,
+           1.288,
+           14.47,
+           16.788,
+           6.33,
+           22.28,
+           22.363,
+           22.356,
+           21.49,
+           2.495,
+           9.195,
+           14.932,
+           14.934,
+           14.951,
+           14.912,
+           14.907,
+           14.862,
+           10.703,
+           15.236,
+           24.909,
+           24.93,
+           24.984,
+           24.963,
+           24.959,
+           24.943,
+           3.047,
+           19.33,
+           20.743,
+           7.94,
+           25.13,
+           24.459,
+           1.199,
+           17.406,
+           19.785,
+           19.792,
+           18.963,
+           19.744,
+           18.91,
+           14.049,
+           23.172,
+           23.387,
+           24.446,
+           24.421,
+           12.19,
+           8.055,
+           16.654,
+           15.971,
+           6.347,
+           17.925,
+           18.973,
+           2.821,
+           18.936,
+           21.786,
+           1.003,
+           20.809,
+           24.65,
+           1.456,
+           13.336,
+           21.752,
+           8.413,
+           13.71,
+           22.696,
+           22.697,
+           22.776,
+           8.889,
+           15.193,
+           18.689,
+           18.957,
+           19.006,
+           19.024,
+           19.006,
+           19.215,
+           19.085,
+           19.084,
+           19.156,
+           0.737,
+           15.76,
+           26.052,
+           18.324,
+           18.785,
+           18.807,
+           18.816,
+           18.844,
+           18.79,
+           18.743,
+           18.728,
+           18.935,
+           18.901,
+           18.842,
+           2.965,
+           20.22,
+           21.192,
+           21.209,
+           21.154,
+           2.352,
+           21.545,
+           21.608,
+           21.603,
+           21.607,
+           21.724,
+           21.513,
+           21.65,
+           1.579,
+           18.987,
+           20.936,
+           7.621,
+           24.919,
+           19.679,
+           23.153,
+           24.899,
+           24.791,
+           19.663,
+           15.161,
+           24.218,
+           24.244,
+           17.633,
+           22.024,
+           22.022,
+           22.194,
+           17.61,
+           18.188,
+           1.329,
+           19.708,
+           21.412,
+           21.447,
+           21.491,
+           21.419,
+           21.548
           ],
           "coloraxis": "coloraxis",
           "size": [
@@ -3483,7 +3483,7 @@
         "coloraxis": {
          "colorbar": {
           "title": {
-           "text": "Total de Defeitos no Dia"
+           "text": "Gotas cortadas (toneladas)"
           }
          },
          "colorscale": [
@@ -4371,7 +4371,7 @@
     "px.scatter(data_frame=df_reset, \n",
     "           x='Gotas cortadas (toneladas)', \n",
     "           y='Total de Defeitos no Dia', \n",
-    "           color='Total de Defeitos no Dia', \n",
+    "           color='Gotas cortadas (toneladas)', \n",
     "           color_continuous_scale='peach', \n",
     "           size='Total de Defeitos no Dia')"
    ]
@@ -8134,7 +8134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -8146,10 +8146,19 @@
        "data": [
         {
          "alignmentgroup": "True",
-         "hovertemplate": "Dia da Semana=%{x}<br>Total de Defeitos no Dia=%{text}<extra></extra>",
+         "hovertemplate": "Dia da Semana=%{x}<br>Total de Defeitos no Dia=%{marker.color}<extra></extra>",
          "legendgroup": "",
          "marker": {
-          "color": "#636efa",
+          "color": [
+           225.93,
+           219.36,
+           219.23,
+           216.45,
+           216.35,
+           203.55,
+           195.06
+          ],
+          "coloraxis": "coloraxis",
           "pattern": {
            "shape": ""
           }
@@ -8198,6 +8207,43 @@
        ],
        "layout": {
         "barmode": "relative",
+        "coloraxis": {
+         "colorbar": {
+          "title": {
+           "text": "Total de Defeitos no Dia"
+          }
+         },
+         "colorscale": [
+          [
+           0,
+           "rgb(253, 224, 197)"
+          ],
+          [
+           0.16666666666666666,
+           "rgb(250, 203, 166)"
+          ],
+          [
+           0.3333333333333333,
+           "rgb(248, 181, 139)"
+          ],
+          [
+           0.5,
+           "rgb(245, 158, 114)"
+          ],
+          [
+           0.6666666666666666,
+           "rgb(242, 133, 93)"
+          ],
+          [
+           0.8333333333333334,
+           "rgb(239, 106, 76)"
+          ],
+          [
+           1,
+           "rgb(235, 74, 64)"
+          ]
+         ]
+        },
         "legend": {
          "tracegroupgap": 0
         },
@@ -9050,7 +9096,9 @@
    "source": [
     "fig = px.bar(df_medias_dia_semana.reset_index(), \n",
     "             x='Dia da Semana', y='Total de Defeitos no Dia',\n",
-    "             text='Total de Defeitos no Dia')\n",
+    "             text='Total de Defeitos no Dia',\n",
+    "             color='Total de Defeitos no Dia',\n",
+    "             color_continuous_scale='peach')\n",
     "\n",
     "fig.update_traces(textposition='outside', texttemplate='%{text}', \n",
     "                  textfont_size=14, textfont_color='black')\n",
@@ -10573,7 +10621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
