--- a/analises/modelo_02.ipynb
+++ b/analises/modelo_02.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "4                   79                   45     4  "
       ]
      },
-     "execution_count": 142,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "4                       232  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -1459,15 +1459,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duração prevista da ordem: 9.00 dias\n",
-      "Total de defeitos previstos: 1893.56\n"
+      "Duração prevista da ordem: 3 dias\n",
+      "Total de defeitos previstos: 456.82\n"
      ]
     },
     {
@@ -1483,7 +1483,7 @@
    ],
    "source": [
     "# Dados de uma nova ordem\n",
-    "nova_ordem = [[169.3, 40.2, 12.5, 1123456]]\n",
+    "nova_ordem = [[169.3, 40.2, 12.5, 123456]]\n",
     "\n",
     "# Fazendo a previsão\n",
     "nova_predicao = model.predict(nova_ordem)\n",
@@ -1492,7 +1492,7 @@
     "nova_duracao_prevista = math.ceil(nova_predicao[0][0])  # Previsão da duração\n",
     "novo_total_defeitos_previsto = nova_predicao[0][1]  # Previsão do total de defeitos\n",
     "\n",
-    "print(f\"Duração prevista da ordem: {nova_duracao_prevista:.2f} dias\")\n",
+    "print(f\"Duração prevista da ordem: {nova_duracao_prevista} dias\")\n",
     "print(f\"Total de defeitos previstos: {novo_total_defeitos_previsto:.2f}\")"
    ]
   },
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1534,21 +1534,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total solicitados: 1123456 frascos\n",
-      "Total produzido esperado: 1125350 frascos\n"
+      "Total solicitados: 123456 frascos\n",
+      "Total produzido esperado: 123913 frascos em 3 dias\n"
      ]
     }
    ],
    "source": [
     "print(f\"Total solicitados: {total_frascos_solicitados} frascos\")\n",
-    "print(f\"Total produzido esperado: {total_produzido_esperado} frascos\")"
+    "print(f\"Total produzido esperado: {total_produzido_esperado} frascos em {nova_duracao_prevista} dias\")"
    ]
   },
   {
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1629,15 +1629,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duração prevista da ordem: 9.00 dias\n",
-      "Total de defeitos previstos: 1893.56\n"
+      "Total solicitados: 123456 frascos\n",
+      "Total de defeitos previstos: 456.82\n",
+      "Total produzido esperado: 123913 frascos em 3 dias\n"
      ]
     },
     {
@@ -1649,7 +1650,7 @@
        "data": [
         {
          "line": {
-          "color": "green"
+          "color": "blue"
          },
          "marker": {
           "size": 10
@@ -1660,24 +1661,12 @@
          "x": [
           1,
           2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9
+          3
          ],
          "y": [
-          218.31601985076136,
-          240.11342982019917,
-          210.24204161252754,
-          215.93207653819977,
-          210.5993512233649,
-          208.8891057956028,
-          183.41404499882603,
-          196.461623188593,
-          209.59230697192538
+          149.14816242097433,
+          164.0396195146895,
+          143.63221806433617
          ]
         }
        ],
@@ -2502,7 +2491,7 @@
          "font": {
           "size": 16
          },
-         "text": "Previsão de Defeitos ao Longo dos 9 Dias da Nova Ordem"
+         "text": "Previsão de Defeitos ao Longo dos 3 Dias da Nova Ordem"
         },
         "xaxis": {
          "title": {
@@ -2557,39 +2546,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>218.316020</td>\n",
+       "      <td>149.148162</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>240.113430</td>\n",
+       "      <td>164.039620</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>210.242042</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>215.932077</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>210.599351</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>208.889106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>183.414045</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>196.461623</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>209.592307</td>\n",
+       "      <td>143.632218</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2598,18 +2563,12 @@
       "text/plain": [
        "             Defeitos Previstos\n",
        "Dia Contado                    \n",
-       "1                    218.316020\n",
-       "2                    240.113430\n",
-       "3                    210.242042\n",
-       "4                    215.932077\n",
-       "5                    210.599351\n",
-       "6                    208.889106\n",
-       "7                    183.414045\n",
-       "8                    196.461623\n",
-       "9                    209.592307"
+       "1                    149.148162\n",
+       "2                    164.039620\n",
+       "3                    143.632218"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2623,7 +2582,7 @@
     "    y=df_dias_duracao['Defeitos Previstos'],\n",
     "    mode='lines+markers',\n",
     "    marker=dict(size=10),\n",
-    "    line=dict(color='green'),\n",
+    "    line=dict(color='blue'),\n",
     "    name='Defeitos Previstos'\n",
     "))\n",
     "\n",
@@ -2636,13 +2595,21 @@
     "    yaxis_title_font_size=14\n",
     ")\n",
     "\n",
-    "print(f\"Duração prevista da ordem: {nova_duracao_prevista:.2f} dias\")\n",
+    "print(f\"Total solicitados: {total_frascos_solicitados} frascos\")\n",
     "print(f\"Total de defeitos previstos: {novo_total_defeitos_previsto:.2f}\")\n",
+    "print(f\"Total produzido esperado: {total_produzido_esperado} frascos em {nova_duracao_prevista} dias\")\n",
     "\n",
     "fig.show()\n",
     "\n",
     "df_dias_duracao[['Dia Contado', 'Defeitos Previstos']].set_index('Dia Contado')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
