--- a/analises/modelo_02.ipynb
+++ b/analises/modelo_02.ipynb
@@ -5760,13 +5760,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Duração prevista da ordem: 4 dias\n",
+      "Total de defeitos previstos: 615.61\n",
+      "\n",
+      "Detalhes da previsão:\n",
+      "Peso médio (g): 180.5\n",
+      "Comprimento médio (mm): 40.2\n",
+      "Diâmetro (mm): 12.5\n",
+      "Total de Frascos: 400000\n",
       "Duração prevista da ordem: 4 dias\n",
       "Total de defeitos previstos: 615.61\n"
      ]
@@ -5778,6 +5786,10 @@
       "c:\\Users\\lucas\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning:\n",
       "\n",
       "X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
+      "\n",
+      "c:\\Users\\lucas\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning:\n",
+      "\n",
+      "X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
       "\n"
      ]
     }
@@ -5786,7 +5798,21 @@
     "# Dados de uma nova ordem\n",
     "nova_ordem = [[180.5, 40.2, 12.5, 400000]] \n",
     "#'Peso médio (g)', 'Comprimento médio (mm)', 'Diâmetro (mm)', 'Total de Frascos'\n",
+    "nova_ordem = [[180.5, 40.2, 12.5, 400000]] \n",
+    "nova_ordem_nome_colunas = ['Peso médio (g)', 'Comprimento médio (mm)', 'Diâmetro (mm)', 'Total de Frascos']\n",
     "\n",
+    "nova_predicao = model.predict(nova_ordem)\n",
+    "\n",
+    "nova_duracao_prevista = math.ceil(nova_predicao[0][0])  \n",
+    "novo_total_defeitos_previsto = nova_predicao[0][1]  \n",
+    "\n",
+    "print(f\"Duração prevista da ordem: {nova_duracao_prevista} dias\")\n",
+    "print(f\"Total de defeitos previstos: {novo_total_defeitos_previsto:.2f}\")\n",
+    "\n",
+    "# Adicionando mais informações sobre a previsão\n",
+    "print(\"\\nDetalhes da previsão:\")\n",
+    "for i, coluna in enumerate(nova_ordem_nome_colunas):\n",
+    "    print(f\"{coluna}: {nova_ordem[0][i]}\")\n",
     "# Fazendo a previsão\n",
     "nova_predicao = model.predict(nova_ordem)\n",
     "\n",
