--- a/analises/modelo_02.ipynb
+++ b/analises/modelo_02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "4                   79                   45     4  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "4                       232  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3549,7 +3549,7 @@
        },
        "data": [
         {
-         "hovertemplate": "Duração da ordem=%{marker.size}<br>Diâmetro (mm)=%{marker.color}<extra></extra>",
+         "hovertemplate": "Duração da ordem=%{x}<br>Diâmetro (mm)=%{marker.color}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": [
@@ -3591,44 +3591,44 @@
           ],
           "coloraxis": "coloraxis",
           "size": [
-           9,
-           3,
-           12,
-           4,
-           10,
-           2,
-           7,
-           20,
-           7,
-           3,
-           5,
-           8,
-           8,
-           3,
-           3,
-           7,
-           5,
-           4,
-           3,
-           3,
-           3,
-           3,
-           5,
-           11,
-           3,
-           11,
-           5,
-           8,
-           3,
-           2,
-           4,
-           4,
-           3,
-           3,
-           6
+           30.966666666666665,
+           38.56666666666667,
+           35.43333333333333,
+           36.875,
+           36.56,
+           27.450000000000003,
+           12.185714285714283,
+           33.435,
+           33.82857142857143,
+           37.56666666666666,
+           40.2,
+           38.75,
+           38.2625,
+           33.6,
+           39.53333333333333,
+           39.3,
+           39.260000000000005,
+           38.175,
+           32.333333333333336,
+           38.13333333333333,
+           34.13333333333333,
+           36.7,
+           37.24,
+           38.345454545454544,
+           35.666666666666664,
+           39.18181818181818,
+           39.16,
+           37.525,
+           36.06666666666667,
+           38.05,
+           37.65,
+           37.675,
+           32.53333333333334,
+           32.5,
+           33.36666666666667
           ],
           "sizemode": "area",
-          "sizeref": 0.05,
+          "sizeref": 0.1005,
           "symbol": "circle"
          },
          "mode": "markers",
@@ -4609,7 +4609,7 @@
        },
        "data": [
         {
-         "hovertemplate": "Duração da ordem=%{marker.size}<br>Total de Frascos=%{marker.color}<extra></extra>",
+         "hovertemplate": "Duração da ordem=%{x}<br>Total de Frascos=%{marker.color}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": [
@@ -4651,44 +4651,44 @@
           ],
           "coloraxis": "coloraxis",
           "size": [
-           9,
-           3,
-           12,
-           4,
-           10,
-           2,
-           7,
-           20,
-           7,
-           3,
-           5,
-           8,
-           8,
-           3,
-           3,
-           7,
-           5,
-           4,
-           3,
-           3,
-           3,
-           3,
-           5,
-           11,
-           3,
-           11,
-           5,
-           8,
-           3,
-           2,
-           4,
-           4,
-           3,
-           3,
-           6
+           1052031,
+           265727,
+           1600487,
+           433842,
+           801014,
+           161756,
+           636428,
+           2405338,
+           860417,
+           197769,
+           528003,
+           635289,
+           853757,
+           412518,
+           292212,
+           748785,
+           559024,
+           243680,
+           320363,
+           205933,
+           290479,
+           275404,
+           599690,
+           1414753,
+           318743,
+           1096148,
+           433650,
+           1119167,
+           274721,
+           256195,
+           471098,
+           451364,
+           391496,
+           304858,
+           752098
           ],
           "sizemode": "area",
-          "sizeref": 0.05,
+          "sizeref": 6013.345,
           "symbol": "circle"
          },
          "mode": "markers",
@@ -5698,7 +5698,7 @@
     "                  y='Diâmetro (mm)', \n",
     "                  title='Duração da ordem vs Diâmetro', \n",
     "                  color='Diâmetro (mm)',  # Cor de acordo com o Diâmetro\n",
-    "                  size='Duração da ordem',  # Tamanho de acordo com a Temperatura\n",
+    "                  size='Diâmetro (mm)',  # Tamanho de acordo com a Temperatura\n",
     "                  color_continuous_scale='peach')  # Escala de cores personalizada\n",
     "fig4.show()\n",
     "\n",
@@ -5707,7 +5707,7 @@
     "                  y='Total de Frascos', \n",
     "                  title='Duração da ordem vs Total de Frascos', \n",
     "                  color='Total de Frascos',  # Cor de acordo com o Diâmetro\n",
-    "                  size='Duração da ordem',  # Tamanho de acordo com a Temperatura\n",
+    "                  size='Total de Frascos',  # Tamanho de acordo com a Temperatura\n",
     "                  color_continuous_scale='peach')  # Escala de cores personalizada\n",
     "fig5.show()"
    ]
@@ -5735,7 +5735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5745,7 +5745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -6705,7 +6705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6714,6 +6714,7 @@
     "# Selecionando as variáveis de entrada e saída\n",
     "X = df[['Peso médio (g)', 'Comprimento médio (mm)', \n",
     "        'Diâmetro (mm)', 'Total de Frascos']]\n",
+    "\n",
     "y = df[['Duração da ordem', 'Total de Defeitos']]\n",
     "\n",
     "# Divisão em treino e teste\n",
@@ -6722,7 +6723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -6772,23 +6773,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duração prevista da ordem: 6 dias\n",
-      "Total de defeitos previstos: 1171.11\n",
+      "Duração prevista da ordem: 8 dias\n",
+      "Total de defeitos previstos: 1663.03\n",
       "\n",
       "Detalhes da previsão:\n",
       "Peso médio (g): 180.5\n",
-      "Comprimento médio (mm): 40.2\n",
+      "Comprimento médio (mm): 50.5\n",
       "Diâmetro (mm): 12.5\n",
-      "Total de Frascos: 600000\n",
-      "Duração prevista da ordem: 6 dias\n",
-      "Total de defeitos previstos: 1171.11\n"
+      "Total de Frascos: 700000\n",
+      "Duração prevista da ordem: 8 dias\n",
+      "Total de defeitos previstos: 1663.03\n"
      ]
     },
     {
@@ -6808,7 +6809,7 @@
    ],
    "source": [
     "# Dados de uma nova ordem\n",
-    "nova_ordem = [[180.5, 40.2, 12.5, 600000]] \n",
+    "nova_ordem = [[180.5, 50.5, 12.5, 700000]] \n",
     "#'Peso médio (g)', 'Comprimento médio (mm)', 'Diâmetro (mm)', 'Total de Frascos'\n",
     "nova_ordem_nome_colunas = ['Peso médio (g)', 'Comprimento médio (mm)', 'Diâmetro (mm)', 'Total de Frascos']\n",
     "\n",
@@ -6867,7 +6868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6889,7 +6890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6906,7 +6907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6929,15 +6930,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duração prevista da ordem: 6 dias\n",
-      "Total de defeitos previstos: 1171.11\n"
+      "Duração prevista da ordem: 8 dias\n",
+      "Total de defeitos previstos: 1663.03\n"
      ]
     },
     {
@@ -6963,15 +6964,19 @@
           3,
           4,
           5,
-          6
+          6,
+          7,
+          8
          ],
          "y": [
-          196.05370567208647,
-          215.62837088210293,
-          188.80305428056877,
-          193.91285993452038,
-          189.12392799988996,
-          187.5880812308315
+          215.6015771535106,
+          237.12796798128866,
+          207.62798711070795,
+          213.24727471439414,
+          207.98085409537217,
+          206.29187308611256,
+          181.1335576788363,
+          194.01890817977755
          ]
         }
        ],
@@ -7796,7 +7801,7 @@
          "font": {
           "size": 16
          },
-         "text": "Previsão de Defeitos ao Longo dos 6 Dias da Nova Ordem"
+         "text": "Previsão de Defeitos ao Longo dos 8 Dias da Nova Ordem"
         },
         "xaxis": {
          "dtick": 1,
@@ -7852,27 +7857,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>196.05</td>\n",
+       "      <td>215.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>215.63</td>\n",
+       "      <td>237.13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>188.80</td>\n",
+       "      <td>207.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>193.91</td>\n",
+       "      <td>213.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>189.12</td>\n",
+       "      <td>207.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>187.59</td>\n",
+       "      <td>206.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>181.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>194.02</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -7881,15 +7894,17 @@
       "text/plain": [
        "             Defeitos Previstos\n",
        "Dia Contado                    \n",
-       "1                        196.05\n",
-       "2                        215.63\n",
-       "3                        188.80\n",
-       "4                        193.91\n",
-       "5                        189.12\n",
-       "6                        187.59"
+       "1                        215.60\n",
+       "2                        237.13\n",
+       "3                        207.63\n",
+       "4                        213.25\n",
+       "5                        207.98\n",
+       "6                        206.29\n",
+       "7                        181.13\n",
+       "8                        194.02"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7940,7 +7955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7951,15 +7966,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total solicitados: 600000 frascos\n",
-      "Total produzido esperado: 601172 frascos em 6 dias\n"
+      "Total solicitados: 700000 frascos\n",
+      "Total produzido esperado: 701664 frascos em 8 dias\n"
      ]
     }
    ],
@@ -7970,17 +7985,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total solicitado: 600000 frascos\n",
-      "Duração prevista da ordem: 6 dias\n",
-      "Total de defeitos previstos: 1171.11\n",
-      "Total produzido esperado: 601172 frascos em 6 dias\n"
+      "Total solicitado: 700000 frascos\n",
+      "Duração prevista da ordem: 8 dias\n",
+      "Total de defeitos previstos: 1663.03\n",
+      "Total produzido esperado: 701664 frascos em 8 dias\n"
      ]
     },
     {
@@ -8006,15 +8021,19 @@
           3,
           4,
           5,
-          6
+          6,
+          7,
+          8
          ],
          "y": [
-          196.05370567208647,
-          215.62837088210293,
-          188.80305428056877,
-          193.91285993452038,
-          189.12392799988996,
-          187.5880812308315
+          215.6015771535106,
+          237.12796798128866,
+          207.62798711070795,
+          213.24727471439414,
+          207.98085409537217,
+          206.29187308611256,
+          181.1335576788363,
+          194.01890817977755
          ]
         }
        ],
@@ -8839,7 +8858,7 @@
          "font": {
           "size": 16
          },
-         "text": "Previsão de Defeitos ao Longo dos 6 Dias da Nova Ordem"
+         "text": "Previsão de Defeitos ao Longo dos 8 Dias da Nova Ordem"
         },
         "xaxis": {
          "dtick": 1,
@@ -8895,27 +8914,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>196.05</td>\n",
+       "      <td>215.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>215.63</td>\n",
+       "      <td>237.13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>188.80</td>\n",
+       "      <td>207.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>193.91</td>\n",
+       "      <td>213.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>189.12</td>\n",
+       "      <td>207.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>187.59</td>\n",
+       "      <td>206.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>181.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>194.02</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -8924,15 +8951,17 @@
       "text/plain": [
        "             Defeitos Previstos\n",
        "Dia Contado                    \n",
-       "1                        196.05\n",
-       "2                        215.63\n",
-       "3                        188.80\n",
-       "4                        193.91\n",
-       "5                        189.12\n",
-       "6                        187.59"
+       "1                        215.60\n",
+       "2                        237.13\n",
+       "3                        207.63\n",
+       "4                        213.25\n",
+       "5                        207.98\n",
+       "6                        206.29\n",
+       "7                        181.13\n",
+       "8                        194.02"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
