--- a/modelos/modelo_final.ipynb
+++ b/modelos/modelo_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dados = pd.read_csv('../dados_modelo.csv')\n",
+    "dados = pd.read_csv('../dados_ordem.csv')\n",
     "df = pd.DataFrame(dados)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "11                      408.76        2409182.00  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -6414,7 +6414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -12846,17 +12846,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dados_dias = pd.read_csv('../dados_dias_modelo.csv')\n",
+    "dados_dias = pd.read_csv('../defeitos_por_dia.csv')\n",
     "df_dias = pd.DataFrame(dados_dias)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -12948,7 +12948,7 @@
        "4                       232  "
       ]
      },
-     "execution_count": 188,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12966,7 +12966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12983,7 +12983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -13943,7 +13943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13961,7 +13961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -14011,7 +14011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -14106,7 +14106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14128,7 +14128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14145,7 +14145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14168,7 +14168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -15107,7 +15107,7 @@
        "3                        146.24"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15158,7 +15158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15169,7 +15169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -15188,7 +15188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -16129,7 +16129,7 @@
        "3                        146.24"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
